--- a/res/xml/preferences_widget_weather.xml
+++ b/res/xml/preferences_widget_weather.xml
@@ -21,7 +21,7 @@
     <PreferenceCategory
         android:title="@string/general_category" >
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:key="show_weather"
             android:title="@string/weather_enable"
             android:defaultValue="true" />
@@ -36,26 +36,26 @@
             android:dialogTitle="@string/weather_icon_set_title"
             android:defaultValue="color" />
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:key="weather_show_when_minimized"
             android:dependency="show_weather"
             android:title="@string/weather_show_when_minimized_title"
             android:summary="@string/weather_show_when_minimized_summary"
             android:defaultValue="true" />
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:key="weather_show_location"
             android:dependency="show_weather"
             android:title="@string/weather_show_location_title"
             android:defaultValue="true" />
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:key="weather_show_timestamp"
             android:dependency="show_weather"
             android:title="@string/weather_show_timestamp_title"
             android:defaultValue="true" />
 
-        <CheckBoxPreference
+        <SwitchPreference
             android:key="weather_invert_lowhigh"
             android:dependency="show_weather"
             android:title="@string/weather_invert_lowhigh"
